<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="checker_add_alarm_checkpoint_title">Last checkpoint</string>
    <string name="checker_add_alarm_enabled_title">Enable alarm</string>
    <string name="checker_add_alarm_led_title">Blink LED</string>
    <string name="checker_add_alarm_sound_title">Sound</string>
    <string name="checker_add_alarm_tts_summary">Announce price alert</string>
    <string name="checker_add_alarm_tts_title">Alarm via Text-To-Speech</string>
    <string name="checker_add_alarm_type_title">Alarm condition</string>
    <string name="checker_add_alarm_value_title">Condition value</string>
    <string name="checker_add_alarm_vibrate_title">Vibrate</string>
    <string name="checker_add_dynamic_currency_pairs_dialog_hint">Hit sync button whenever you want to download new currency pairs from exchange.</string>
    <string name="checker_add_dynamic_currency_pairs_dialog_last_sync">Last sync: %1$s</string>
    <string name="checker_add_dynamic_currency_pairs_sync_button">Synchronize now!</string>
    <string name="checkers_list_add_title">Add Checker</string>
    <string name="checkers_list_sort_currency">Currency</string>
    <string name="checkers_list_sort_exchange">Exchange</string>
    <string name="checkers_list_sort_manually">Manually</string>
    <string name="generic_refresh_all">Refresh all</string>
    <string name="generic_search">Search</string>
    <string name="generic_sort_by">Sort by…</string>
    <string name="market_picker_list_sort_alphabetically">Alphabetically</string>
    <string name="market_picker_list_sort_newest">Newest first</string>
    <string name="settings_about_category_title">About</string>
    <string name="settings_about_changelog_key">SETTINGS_ABOUT_CHANGELOG</string>
    <string name="settings_about_changelog_title">Show change log</string>
    <string name="settings_about_donate_key">SETTINGS_ABOUT_DONATE</string>
    <string name="settings_about_donate_summary">If you like this app, or not, you can donate anything to support the further development.</string>
    <string name="settings_about_donate_title">Donate ♥</string>
    <string name="settings_about_github_key">SETTINGS_ABOUT_GITHUB</string>
    <string name="settings_about_github_title">Visit Diana Bitcoin @ GitHub</string>
    <string name="settings_about_rate_key">SETTINGS_ABOUT_RATE</string>
    <string name="settings_about_rate_summary">or share your opinion</string>
    <string name="settings_about_rate_title">Rate us on Google Play</string>
    <string name="settings_about_report_issue_key">SETTINGS_ABOUT_REPORT_ISSUE</string>
    <string name="settings_about_report_issue_summary">"If you think something doesn't work correctly, would like to see new exchanges or just want to report anything else."</string>
    <string name="settings_about_report_issue_title">Report issue or ideas</string>
    <string name="settings_about_share_key">SETTINGS_ABOUT_SHARE</string>
    <string name="settings_about_share_summary">Let other know about this awesome app :)</string>
    <string name="settings_about_share_title">Share with friends!</string>
    <string name="settings_about_version_key">SETTINGS_ABOUT_VERSION</string>
    <string name="settings_about_version_summary">by Hai Vo (vodinhhai@gmail.com)</string>
    <string name="settings_about_version_title">%1$s - version %2$s</string>
    <string name="settings_check_global_frequency_key">SETTINGS_CHECK_GLOBAL_FREQUENCY</string>
    <string name="settings_check_global_frequency_title">Global update interval</string>
    <string name="settings_check_notification_category_key">SETTINGS_CHECK_NOTIFICATION_CATEGORY</string>
    <string name="settings_check_notification_category_title">Price notifications</string>
    <string name="settings_check_notification_custom_layout_key">SETTINGS_CHECK_NOTIFICATION_CUSTOM_LAYOUT</string>
    <string name="settings_check_notification_custom_layout_summary">Use custom layout with refresh button on the right when notification is collapsed</string>
    <string name="settings_check_notification_custom_layout_title">Custom notification layout</string>
    <string name="settings_check_notification_expandable_key">SETTINGS_CHECK_NOTIFICATION_EXPANDABLE</string>
    <string name="settings_check_notification_expandable_summary">Allow notifications with latest price to be expandable</string>
    <string name="settings_check_notification_expandable_title">Expandable notifications</string>
    <string name="settings_check_notification_ticker_key">SETTINGS_CHECK_NOTIFICATION_TICKER</string>
    <string name="settings_check_notification_ticker_summary">Ticker text will be displayed on status bar right after checking a price</string>
    <string name="settings_check_notification_ticker_title">Display ticker</string>
    <string name="settings_notifications_category_key">SETTINGS_NOTIFICATIONS_CATEGORY</string>
    <string name="settings_notifications_category_title">Customize notifications</string>
    <string name="settings_sounds_advanced_alarm_stream_key">SETTINGS_SOUND_ADVANCED_ALARM_STREAM</string>
    <string name="settings_sounds_advanced_alarm_stream_title">Choose audio stream for Alarm notifications</string>
    <string name="settings_sounds_advanced_category_title">Advanced</string>
    <string name="settings_sounds_alarm_notification_category_key">SETTINGS_SOUNDS_ALARM_NOTIFICATION_CATEGORY</string>
    <string name="settings_sounds_alarm_notification_category_title">Alarm notification sounds</string>
    <string name="settings_sounds_category_key">SETTINGS_SOUNDS</string>
    <string name="settings_sounds_category_title">Customize sounds</string>
    <string name="settings_tts_advanced_category_title">Advanced</string>
    <string name="settings_tts_advanced_stream_key">SETTINGS_TTS_ADVANCED_STREAM</string>
    <string name="settings_tts_advanced_stream_title">Choose audio stream for TTS</string>
    <string name="settings_tts_category_key">SETTINGS_TTS_CATEGORY</string>
    <string name="settings_tts_category_title">Text-To-Speech Settings</string>
    <string name="settings_tts_configure_key">SETTINGS_TTS_CONFIGURE</string>
    <string name="settings_tts_configure_summary">Please note that Diana Bitcoin can speak to you only in English, so make sure your TTS Engine supports it.</string>
    <string name="settings_tts_configure_title">Configure TTS engine</string>
    <string name="settings_tts_format_category_title">Format</string>
    <string name="settings_tts_format_example_key">SETTINGS_TTS_FORMAT_EXAMPLEE</string>
    <string name="settings_tts_format_example_title">Example for %1$s - %2$s:</string>
    <string name="settings_tts_format_integer_only_key">SETTINGS_TTS_INTEGER_ONLY</string>
    <string name="settings_tts_format_integer_only_summary">"Decimal part of price won't be announced if value is greater than 1"</string>
    <string name="settings_tts_format_integer_only_title">Only whole numbers</string>
    <string name="settings_tts_format_speak_base_currency_key">SETTINGS_TTS_FORMAT_SPEAK_BASE_CURRENCY</string>
    <string name="settings_tts_format_speak_base_currency_summary">Base (first) currency would be spoken before the price</string>
    <string name="settings_tts_format_speak_base_currency_title">Speak base currency</string>
    <string name="settings_tts_format_speak_counter_currency_key">SETTINGS_TTS_FORMAT_SPEAK_COUNTER_CURRENCY</string>
    <string name="settings_tts_format_speak_counter_currency_summary">Counter (second) currency would be spoken right after the price</string>
    <string name="settings_tts_format_speak_counter_currency_title">Speak counter currency</string>
    <string name="settings_tts_format_speak_exchange_key">SETTINGS_TTS_FORMAT_SPEAK_EXCHANGE</string>
    <string name="settings_tts_format_speak_exchange_title">Speak exchange name</string>
    <string name="settings_tts_headphones_only_key">SETTINGS_TTS_HEADPHONES_ONLY</string>
    <string name="settings_tts_headphones_only_title">Only on headphones</string>
    <string name="settings_tts_screen_off_only_key">SETTINGS_TTS_SCREEN_OFF_ONLY</string>
    <string name="settings_tts_screen_off_only_title">Only when display is off</string>
    <string name="settings_tts_speak_conditions_category_title">Speak conditions</string>
    <string name="suggest_new_exchange_activity_send_suggestion">Go to GitHub</string>
    <string name="suggest_new_exchange_activity_text"><b>I like adding new exchanges</b>" for you but there are some which I cannot add due to described reasons: 

"<b>- Bitcoin.de</b>": do not provide any form of public API. I've sent them an email with questions if they have any plans to release API, but still no response from them. 

"<b>- CoinedUp</b>": they don't want our users to read data directly from them. The only solution is to setup and maintain our own server, but this would require introducing a paid subscription plan into Diana Bitcoin. As for now I want to keep Diana Bitcoin free. If you are very interested in this exchange and you will be willing to pay for using it in Diana Bitcoin please contact us via email.

"<b>- BitNZ</b>": doesn't provide any public API. 

"<b>- Bitcashout</b>": no API? 

"<b>- Coin.mx</b>": no API? 

"<b>- AllCrypt</b>: They have very strict limitation to their API access and (after some tests) I am unable to add this exchanges. Please see more details <a href="https://github.com/talobin/crypto/pull/43">here</a>".

As you can see from our comments I really care about Diana Bitcoin users very much and try to add almost every functionality suggested by them and support Diana Bitcoin as good as I can - "<b>doing it continuously for almost a year</b>".
I'm just a normal guy, making Diana Bitcoin in my free time (after regular job) and provide it completely "<b>for free</b>" only to make other people happy - so the things that motivates me the most are great reviews from users.
If you thing I am doing a great job please do not forget to give a great rating on Google Play Store:) 

"<big>Update:</big>" 
Since "<b>March 2014</b> I have published an open souce projects called <b>DataModule</b> and <b>DataModuleTester</b> on <b>GitHub</b>". Now every user is able to contribute to our project by adding support for new exchanges or updating currency pairs on selected ones.
I believe that "<b>with your help</b>" we can make this app even better! 

This is also a new official place to report any issues or ideas for Diana Bitcoin project."</string>
    <string name="widget_settings_alpha_percent_key">WIDGET_SETTINGS_ALPHA_PERCENT</string>
    <string name="widget_settings_alpha_percent_title">Background opacity</string>
    <string name="widget_settings_compact_mode_key">WIDGET_SETTINGS_COMPACT_MODE</string>
    <string name="widget_settings_compact_mode_summary">Display Checkers in condensed form, with less details.</string>
    <string name="widget_settings_compact_mode_title">Compact mode</string>
    <string name="widget_settings_dark_theme_key">WIDGET_SETTINGS_DARK_THEME</string>
    <string name="widget_settings_dark_theme_title">Use dark theme</string>
    <string name="widget_settings_refresh_hint_summary">You can click particular Checker for the price update.</string>
    <string name="widget_settings_refresh_hint_title">Hint:</string>
    <string name="widget_settings_show_actionbar_key">WIDGET_SETTINGS_SHOW_ACTIONBAR</string>
    <string name="widget_settings_show_actionbar_summary">Actionbar with \"Refresh All\" icon will be present.</string>
    <string name="widget_settings_show_actionbar_title">Show Actionbar</string>
</resources>