<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/action_search"
          android:orderInCategory="100"
          android:title="@string/generic_search"
          app:showAsAction="always"
          app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item android:icon="@drawable/ic_action_sort"
          android:id="@id/sortByItem"
          android:orderInCategory="101"
          android:title="@string/generic_sort_by"
          app:showAsAction="ifRoom|withText">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@id/sortAlphabeticallyItem"
                      android:title="@string/market_picker_list_sort_alphabetically"
                      app:showAsAction="never"/>
                <item android:id="@id/sortNewestFirstItem"
                      android:title="@string/market_picker_list_sort_newest"
                      app:showAsAction="never"/>
            </group>
        </menu>
    </item>
</menu>