<?xml version="1.0" encoding="utf-8"?>
<com.linearlistview.internal.IcsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:orientation="vertical"
                                             android:layout_width="fill_parent"
                                             android:layout_height="wrap_content"
                                             style="@style/GenericIcsLayout.Full">
    <haivo.us.crypto.view.generic.ViewCheckBoxPreference android:id="@+id/alarmEnabledView"
                                                         android:layout_width="fill_parent"
                                                         android:layout_height="wrap_content"
                                                         app:title="@string/checker_add_alarm_enabled_title"/>
    <haivo.us.crypto.view.ViewAlarmTypeSpinnerPreference android:id="@+id/alarmTypeView"
                                                         android:layout_width="fill_parent"
                                                         android:layout_height="wrap_content"
                                                         app:title="@string/checker_add_alarm_type_title"
                                                         app:dialogTitle="@string/checker_add_alarm_type_title"/>
    <haivo.us.crypto.view.ViewAlarmValuePickerPreference android:id="@+id/alarmValueView"
                                                         android:layout_width="fill_parent"
                                                         android:layout_height="wrap_content"
                                                         app:title="@string/checker_add_alarm_value_title"/>
    <haivo.us.crypto.view.ViewAlarmCheckPointPreference android:id="@+id/alarmCheckPointView"
                                                        android:layout_width="fill_parent"
                                                        android:layout_height="wrap_content"
                                                        app:title="@string/checker_add_alarm_checkpoint_title"/>
    <haivo.us.crypto.view.generic.ViewCheckBoxPreference android:id="@+id/alarmSoundView"
                                                         android:layout_width="fill_parent"
                                                         android:layout_height="wrap_content"
                                                         app:title="@string/checker_add_alarm_sound_title"/>
    <haivo.us.crypto.view.generic.ViewCheckBoxPreference android:id="@+id/alarmVibrateView"
                                                         android:layout_width="fill_parent"
                                                         android:layout_height="wrap_content"
                                                         app:title="@string/checker_add_alarm_vibrate_title"/>
    <haivo.us.crypto.view.generic.ViewCheckBoxPreference android:id="@+id/alarmLedView"
                                                         android:layout_width="fill_parent"
                                                         android:layout_height="wrap_content"
                                                         app:title="@string/checker_add_alarm_led_title"/>
    <haivo.us.crypto.view.generic.ViewCheckBoxPreference android:id="@+id/alarmTTSView"
                                                         android:layout_width="fill_parent"
                                                         android:layout_height="wrap_content"
                                                         app:title="@string/checker_add_alarm_tts_title"
                                                         app:summary="@string/checker_add_alarm_tts_summary"/>
</com.linearlistview.internal.IcsLinearLayout>