<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checker_add_dynamic_currency_pairs_dialog_hint" />
        <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@+id/refreshImageWrapper" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:minWidth="54.0dip" android:minHeight="52.0dip" style="?android:attr/buttonStyle">
            <ImageView android:id="@+id/refreshImageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_action_refresh" android:scaleType="center" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/checker_add_dynamic_currency_pairs_sync_button" />
        </LinearLayout>
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_horizontal" android:id="@+id/statusView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/checker_add_dynamic_currency_pairs_dialog_last_sync" />
    </LinearLayout>
</ScrollView>